# autocensor

./: .gitignore  Dockerfile  app.py  blur_masked_images.py  chat.py  colorlog_formatter.py  display_blur.ipynb  docker-compose.yml  file_processing.py  index.html  logging_config.py  main.py  prompt.txt  pyproject.toml  redact.py  redact_prompt.txt  text_blur.ipynb
.benchmarks/Windows-CPython-3.13-64bit/: 0001_1.1.0.json  0002_1.2.0.json  0003_1.2.2.json  0004_1.2.3.json  0005_1.2.4.json  0006_1.2.5.json
benchmarks/: test_process_file.py
static/: index.html  script.js  styles.css
