[project]
name = "ai-blur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.115.12",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pillow-heif>=0.22.0",
    "python-multipart>=0.0.20",
    "ultralytics>=8.3.119",
    "uvicorn>=0.34.2",
]
